--- a/style.css
+++ b/style.css
@@ -11,25 +11,28 @@ html {
 }
 
 body {
-  background: #f0f2f5;
+  background: #F0F2F5;
   font-family: 'Poppins', sans-serif;
 }
 
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
+body header {
+  background: #2D4A22;
+  padding: 2rem 0 10rem;
 }
 
-.container {
-  width: min(90vw, 800px);
-  margin: auto;
+body header .containerHeader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+body header .logo {
+  height: 50px;
+  width: 200px;
+  background: url("./assets/logo.svg") no-repeat;
 }
 
 h2 {
@@ -39,70 +42,9 @@ h2 {
   font-weight: normal;
 }
 
-/* Links & Buttons ===================== */
-a {
-  color: #49AA26;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #3dd705;
-}
-
-button {
-  width: 100%;
-  height: 50px;
-  border: none;
-  color: white;
-  background: #49AA26;
-  padding: 0;
-  border-radius: 0.25rem;
-  cursor: pointer;
-}
-
-button:hover {
-  background: #3dd705;
-}
-
-.button.new {
-  display: inline-block;
-  margin-bottom: .8rem;
-}
-
-.button.cancel {
-  color: #e92929;
-  border: 2px #e92929 solid;
-  border-radius: 0.25rem;
-  height: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  opacity: 0.6;
-}
-
-.button.cancel:hover {
-  opacity: 1;
-}
-
-header {
-  background: #2D4A22;
-  padding: 2rem 0 10rem;
-  text-align: center;
-}
-
-header #logo {
-  color: #fff;
-  font-weight: 100;
-}
-
-main {
-  /* Cards ===================== */
+.container {
+  width: min(90vw, 800px);
+  margin: auto;
 }
 
 main #balance {
@@ -148,155 +90,64 @@ main .total {
   color: white;
 }
 
-/* Table ===================== */
-#transaction {
+main #transaction {
   display: block;
   width: 100%;
   overflow-x: auto;
 }
 
-#data-table {
+main #transaction #data-table {
   width: 100%;
   border-spacing: 0 0.5rem;
-  color: #969cb3;
+  color: #969CB3;
 }
 
-table thead tr th:first-child,
-table tbody tr td:first-child {
+main #transaction table thead tr th:first-child,
+main #transaction table tbody tr td:first-child {
   border-radius: 0.25rem 0 0 0.25rem;
 }
 
-table thead tr th:last-child,
-table tbody tr td:last-child {
+main #transaction table thead tr th:last-child,
+main #transaction table tbody tr td:last-child {
   border-radius: 0 0.25rem 0.25rem 0;
 }
 
-table thead th {
-  background: gray;
-  color: white;
+main #transaction table thead th {
+  color: #969CB3;
   font-weight: normal;
   padding: 1rem 2rem;
   text-align: left;
 }
 
-table tbody tr {
+main #transaction table tbody tr {
   opacity: 0.7;
 }
 
-table tbody tr:hover {
+main #transaction table tbody tr:hover {
   opacity: 1;
 }
 
-table tbody td {
+main #transaction table tbody td {
   background: white;
   padding: 1rem 2rem;
 }
 
-td.description {
+main #transaction table td.description {
   color: #363f5f;
 }
 
-td.income {
+main #transaction table td.income {
   color: #12a454;
 }
 
-td.expense {
-  color: #e92929;
+main #transaction table td.expense {
+  color: #E92929;
 }
 
-/* Modal ===================== */
-.modal-overlay {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  position: fixed;
-  top: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  opacity: 0;
-  visibility: hidden;
-  z-index: 999;
-}
-
-.modal-overlay.active {
-  opacity: 1;
-  visibility: visible;
-}
-
-.modal {
-  background: #F0F2f5;
-  padding: 2.4rem;
-  position: relative;
-  z-index: 1;
-}
-
-/* Form ===================== */
-#form {
-  max-width: 500px;
-}
-
-#form h2 {
-  margin-top: 0;
-}
-
-input {
-  border: none;
-  border-radius: 0.2rem;
-  padding: 0.8rem;
-  width: 100%;
-}
-
-.input-group {
-  margin-top: 0.8rem;
-}
-
-.input-group .help {
-  opacity: 0.4;
-}
-
-.input-group.actions {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.input-group.actions .button,
-.input-group.actions button {
-  width: 48%;
-}
-
-/* Footer ===================== */
 footer {
   text-align: center;
   padding: 4rem 0 2rem;
   color: #363f5f;
   opacity: 0.6;
-}
-
-/* Responsive ===================== */
-@media (min-width: 800px) {
-  html {
-    font-size: 87.5%;
-  }
-  #balance {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
-  }
 }
 /*# sourceMappingURL=style.css.map */
