--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,9 @@
-$dark-blue: #363f5f;
+$titulos: #363f5f;
 $green: #49AA26;
 $light-green: #3dd705;
-$red: #e92929;
+$red: #E92929;
+$textos: #969CB3;
+$background: #F0F2F5;
 
 * {
     margin: 0;
@@ -14,97 +16,36 @@ html {
 }
 
 body {
-    background: #f0f2f5;
-    font-family:'Poppins', sans-serif
-}
+    background: $background;
+    font-family:'Poppins', sans-serif;
 
-.sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border-width: 0;
-}
+    header {
+        background: #2D4A22;
+        padding: 2rem 0 10rem;
 
-.container {
-    width: #{"min(90vw, 800px)"};
-    margin: auto;
+        .containerHeader {
+            display: flex;
+            justify-content: center;
+        }
+        .logo {
+            height: 50px;
+            width: 200px;
+            background: url("./assets/logo.svg") no-repeat;
+
+        }
+    }
 }
 
 h2 {
     margin-top: 3.2rem;
     margin-bottom: 0.8rem;
-    color: $dark-blue;
-
+    color: $titulos;
     font-weight: normal;
 }
 
-/* Links & Buttons ===================== */
-a {
-    color: $green;
-    text-decoration: none;
-}
-
-a:hover {
-    color: $light-green;
-}
-
-button {
-    width: 100%;
-    height: 50px;
-
-    border: none;
-
-    color: white;
-    background: $green;
-
-    padding: 0;
-
-    border-radius: 0.25rem;
-
-    cursor: pointer;
-}
-
-button:hover {
-    background: $light-green;
-}
-
-.button.new {
-    display: inline-block;
-    margin-bottom: .8rem;
-}
-
-.button.cancel {
-    color: $red;
-    border: 2px $red solid;
-    border-radius: 0.25rem;
-
-    height: 50px;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    opacity: 0.6;
-}
-
-.button.cancel:hover {
-    opacity: 1;
-}
-
-header {
-    background: #2D4A22;
-    padding: 2rem 0 10rem;
-    text-align: center;
-
-    #logo {
-        color: #fff;
-        font-weight: 100;
-    }
+.container {
+    width: #{"min(90vw, 800px)"};
+    margin: auto;
 }
 
 main {
@@ -117,14 +58,13 @@ main {
         }
     }
 
-    /* Cards ===================== */
     .card {
         background: white;
         padding: 1.5rem 2rem;
         border-radius: 0.25rem;
 
         margin-bottom: 2rem;
-        color: $dark-blue;
+        color: $titulos;
 
         h3 {
             font-weight: normal;
@@ -147,164 +87,73 @@ main {
         background: $green;
         color: white;
     }
+
+    #transaction {
+        display: block;
+        width: 100%;
+        overflow-x: auto;
+
+        #data-table {
+            width: 100%;
+            border-spacing: 0 0.5rem;
+            color: $textos;
+        }
+
+        table {
+            thead tr th:first-child,
+            tbody tr td:first-child {
+                border-radius: 0.25rem 0 0 0.25rem;
+            }
+
+            thead tr th:last-child,
+            tbody tr td:last-child{
+                border-radius: 0 0.25rem 0.25rem 0;
+            }
+
+            thead th {
+                //background: #969CB2;
+                color: $textos;
+
+                font-weight: normal;
+                padding: 1rem 2rem;
+
+                text-align: left;
+            }
+
+            tbody tr {
+                opacity: 0.7
+            }
+
+            tbody tr:hover {
+                opacity: 1
+            }
+
+            tbody td {
+                background:white;
+                padding: 1rem 2rem;
+            }
+
+            td.description {
+                color: $titulos;
+            }
+
+            td.income {
+                color: #12a454;
+            }
+
+            td.expense {
+                color: $red;
+            }
+        }
+    }
 }
 
-/* Table ===================== */
-#transaction {
-    display: block;
-    width: 100%;
-    overflow-x: auto;
-}
-#data-table {
-    width: 100%;
-    border-spacing: 0 0.5rem;
-    color: #969cb3;
-}
-
-table thead tr th:first-child,
-table tbody tr td:first-child
-{
-    border-radius: 0.25rem 0 0 0.25rem;
-}
-
-table thead tr th:last-child,
-table tbody tr td:last-child{
-    border-radius: 0 0.25rem 0.25rem 0;
-}
-
-table thead th {
-    background: gray;
-    color: white;
-
-    font-weight: normal;
-    padding: 1rem 2rem;
-
-    text-align: left;
-}
-
-table tbody tr {
-    opacity: 0.7
-}
-
-table tbody tr:hover {
-    opacity: 1
-}
-
-table tbody td {
-    background:white;
-    padding: 1rem 2rem;
-}
-
-td.description {
-    color: $dark-blue;
-}
-
-td.income {
-    color: #12a454;
-}
-
-td.expense {
-    color: $red;
-}
-
-/* Modal ===================== */
-.modal-overlay {
-    width: 100%;
-    height: 100%;
-
-    background-color: rgba(0,0,0,0.7);
-
-    position: fixed;
-    top: 0;
-
-    display:flex;
-    align-items: center;
-    justify-content: center;
-
-    opacity: 0;
-    visibility: hidden;
-
-    z-index: 999;
-}
-
-.modal-overlay.active {
-    opacity: 1;
-    visibility: visible;
-}
-
-.modal {
-    background: #F0F2f5;
-    padding: 2.4rem;
-
-    position: relative;
-    z-index: 1;
-}
-
-
-/* Form ===================== */
-#form {
-    max-width: 500px;
-}
-
-#form h2 {
-    margin-top: 0;
-}
-
-input {
-    border: none;
-    border-radius: 0.2rem;
-
-    padding: 0.8rem;
-
-    width: 100%;
-}
-
-.input-group {
-    margin-top: 0.8rem;
-}
-
-.input-group .help{
-    opacity: 0.4;
-}
-
-.input-group.actions {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.input-group.actions .button,
-.input-group.actions button {
-    width: 48%;
-}
-
-
-/* Footer ===================== */
 footer {
     text-align: center;
     padding: 4rem 0 2rem;
-    color: $dark-blue;
+    color: $titulos;
 
     opacity: 0.6;
 }
-
-
-/* Responsive ===================== */
-@media (min-width: 800px) {
-    html {
-        font-size: 87.5%;
-    }
-
-    #balance {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 2rem;
-    }
-}
-
-
-
-
-
 
 
